--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -31,6 +31,11 @@ runs:
       - name: Install Sdk
         run: |
           sdkmanager --licenses
+          echo "yes"
+          echo "yes"
+          echo "yes"
+          echo "yes"
+          echo "yes"
         shell: bash
 
       - name: Check if System Image is Installed
