--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -2,12 +2,7 @@
 name: Check license
 
 on: 
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - '*'
+  workflow_dispatch
 
 jobs:
   update-badge:
