--- a/.github/workflows/emulator.yml
+++ b/.github/workflows/emulator.yml
@@ -1,12 +1,7 @@
 name: Launch emulator
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - '*'
+on: 
+  workflow_dispatch
 
 jobs:
   launch_emulator:
