--- a/.github/workflows/testing_emulator.yml
+++ b/.github/workflows/testing_emulator.yml
@@ -1,12 +1,7 @@
 name: test custom emulator action
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - '*'
+on: 
+  workflow_dispatch
 
 jobs:
   launch_emulator:
