--- a/.github/workflows/testing_emulator.yml
+++ b/.github/workflows/testing_emulator.yml
@@ -1,6 +1,12 @@
 name: test custom emulator action
 
-on: 
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - '*'
   workflow_dispatch:
 
 jobs:
