--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -1,8 +1,13 @@
 #  Copyright 2019 Foo. All rights reserved. MIT license.
 name: Check license
 
-on: 
-  workflow_dispatch
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - '*'
 
 jobs:
   update-badge:
