--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -30,7 +30,8 @@ runs:
 
       - name: Install Sdk
         run: |
-          echo "y y y y y" | sdkmanager --licenses;
+          echo "y"
+          echo "y" | sdkmanager --licenses;
         shell: bash
 
       - name: Check if System Image is Installed
