--- a/.github/workflows/send_slack_message.yml
+++ b/.github/workflows/send_slack_message.yml
@@ -16,6 +16,12 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v3
 
+      - name: setup java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'zulu'
+
       - name: run tests
         run: |
           chmod +x gradlew
