--- a/.github/workflows/send_slack_message.yml
+++ b/.github/workflows/send_slack_message.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     - cron: '45 13 * * *'
     - cron: '15 19 * * *'
+    - cron: '50,51,52,53,54,55,56,57,22,23,24,25,26,27 * * * *'
   workflow_dispatch:
   
       
