--- a/.github/workflows/send_slack_message.yml
+++ b/.github/workflows/send_slack_message.yml
@@ -2,7 +2,7 @@ name: Send slack message
 
 on: 
   schedule:
-    - cron: '50,51,52,53,54,55,56,57,58,59,0,1,2,3,4,5,6,7,22,23,24,25,26,27,28,29,30,31,32 * * * *'
+    - cron: '15 14 * * *'
   workflow_dispatch:
   
       
