--- a/.github/workflows/send_slack_message.yml
+++ b/.github/workflows/send_slack_message.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: print output
         if: always()
-        run: echo ${{ steps.test.outputs }}
+        run: echo ${{join(steps.test.outputs.*, '\n')}}
 
       - name: send message
         if: always()
