--- a/.github/workflows/send_slack_message.yml
+++ b/.github/workflows/send_slack_message.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: print output
         if: always()
-        run: echo ${{join(steps.test.outputs.*, '\n')}}
+        run: cat build/reports/tests/testDebugUnitTest/index.html
 
       - name: send message
         if: always()
