--- a/.github/workflows/send_slack_message.yml
+++ b/.github/workflows/send_slack_message.yml
@@ -35,8 +35,7 @@ jobs:
         if: always()
         run: |
           curl -X POST -H 'Content-type: application/json'
-          --data '{"message" : "test message"}'
-          $SLACK_WEBHOOK_URL
+          --data '{"message" : "test message"}' $SLACK_WEBHOOK_URL
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           
