--- a/.github/workflows/send_slack_message.yml
+++ b/.github/workflows/send_slack_message.yml
@@ -33,16 +33,16 @@ jobs:
         run: cat test_output.txt | grep -E "com.example.breach.*FAILED"
         shell: bash
 
-      - name: send message
-        if: always()
-        run: |
-          if [ ${{ steps.test.outcome }} == 'success' ]; then
-            curl -X POST -H 'Content-type: application/json' --data '{"message" : "All tests passed!"}' $SLACK_WEBHOOK_URL
-          else
-            tests=$(cat test_output.txt | grep -E "com.example.breach.*FAILED")
-            curl -X POST -H 'Content-type: application/json' --data '{"message" : "Following tests failed!\n $tests"}' $SLACK_WEBHOOK_URL
-          fi
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        shell: bash
+      # - name: send message
+      #   if: always()
+      #   run: |
+      #     if [ ${{ steps.test.outcome }} == 'success' ]; then
+      #       curl -X POST -H 'Content-type: application/json' --data '{"message" : "All tests passed!"}' $SLACK_WEBHOOK_URL
+      #     else
+      #       tests=$(cat test_output.txt | grep -E "com.example.breach.*FAILED")
+      #       curl -X POST -H 'Content-type: application/json' --data '{"message" : "Following tests failed!\n $tests"}' $SLACK_WEBHOOK_URL
+      #     fi
+      #   env:
+      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      #   shell: bash
           
