--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -30,8 +30,9 @@ runs:
 
       - name: Install Sdk
         run: |
-          chmod +x /.github/scripts/accept_license.exp
+          chmod +x ./.github/scripts/accept_license.exp
           ./.github/scripts/accept_license.exp
+          .github/scripts/accept_license.exp
           sdkmanager --install ${ANDROID_SDK_PACKAGES}
         shell: bash
           # sdkmanager --install 'system-images;android-30;google_apis_playstore;x86_64'
