--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -13,7 +13,8 @@ env:
   ANDROID_TARGET: google_apis_playstore
   API_LEVEL: 30
   ANDROID_BUILD_TOOLS_VERSION: 30.0.2
-  ANDROID_SDK_PACKAGES: system-images;android-33;google_apis_playstore;x86_64 platforms;android-33 build-tools;33.0.2 platform-tools emulator
+  ANDROID_SDK_PACKAGES: system-images;android-30;google_apis_playstore;x86_64 platforms;android-30 build-tools;30.0.3 platform-tools emulator
+  # ANDROID_SDK_PACKAGES: system-images;android-33;google_apis_playstore;x86_64 platforms;android-33 build-tools;33.0.2 platform-tools emulator
   EMULATOR_TIMEOUT: 350
   EMULATOR_NAME: nexus
 
@@ -32,19 +33,8 @@ runs:
         run: |
           chmod +x ./.github/scripts/accept_license.exp
           ./.github/scripts/accept_license.exp
-          .github/scripts/accept_license.exp
           sdkmanager --install ${ANDROID_SDK_PACKAGES}
         shell: bash
-          # sdkmanager --install 'system-images;android-30;google_apis_playstore;x86_64'
-        #   echo "Current Working Directory: $(pwd)"
-
-        #   # List the contents of ./.github/scripts directory
-        #   ls -l ./.github/scripts
-
-        #   # Execute the expect script
-        #   chmod +x ./.github/scripts/accept_license.exp
-        #   ./.github/scripts/accept_license.exp
-        # shell: bash
 
       - name: Check if System Image is Installed
         run: |
