--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -13,7 +13,7 @@ env:
   ANDROID_TARGET: google_apis_playstore
   API_LEVEL: 30
   ANDROID_BUILD_TOOLS_VERSION: 30.0.2
-  ANDROID_SDK_PACKAGES: system-images;android-30;google_apis_playstore;x86_64 platforms;android-30 build-tools;30.0.3 platform-tools emulator
+  # ANDROID_SDK_PACKAGES: system-images;android-30;google_apis_playstore;x86_64 platforms;android-30 build-tools;30.0.3 platform-tools emulator
   # ANDROID_SDK_PACKAGES: system-images;android-33;google_apis_playstore;x86_64 platforms;android-33 build-tools;33.0.2 platform-tools emulator
   EMULATOR_TIMEOUT: 350
   EMULATOR_NAME: nexus
@@ -33,9 +33,9 @@ runs:
         run: |
           chmod +x ./.github/scripts/accept_license.exp
           ./.github/scripts/accept_license.exp
-          echo "~~~~~~~~~~~~~~~~~~~~~~~~INSTALLING SDK~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~"
-          sdkmanager --install 'system-images;android-30;google_apis_playstore;x86_64 platforms;android-30 build-tools;30.0.3 platform-tools emulator'
-          echo "~~~~~~~~~~~~~~~~~~~~~~~~DONE --- INSTALLING SDK~~~~~~~~~~~~~~~~~~~~~"
+          # echo "~~~~~~~~~~~~~~~~~~~~~~~~INSTALLING SDK~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~"
+          # sdkmanager --install 'system-images;android-30;google_apis_playstore;x86_64 platforms;android-30 build-tools;30.0.3 platform-tools emulator'
+          # echo "~~~~~~~~~~~~~~~~~~~~~~~~DONE --- INSTALLING SDK~~~~~~~~~~~~~~~~~~~~~"
         shell: bash
 
       - name: Check if System Image is Installed
@@ -47,7 +47,6 @@ runs:
             echo "System image already installed."
           fi
         shell: bash
-        
 
       # - name: Create Emulator
       #   id: create_emulator
