--- a/.github/workflows/send_slack_message.yml
+++ b/.github/workflows/send_slack_message.yml
@@ -34,7 +34,9 @@ jobs:
         shell: bash
 
       - name: print date
+        if: always()
         run: echo "date +'%Y-%m-%d'"
+        shell: bash
 
       # - name: send message
       #   if: always()
