--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -1,56 +1,40 @@
 name: 'Launch Emulator and run tests'
-description: 'Launches an android emulator and runs the input script'
+description: 'Launches an Android emulator and runs the input script'
 inputs:
   script:
-    description: 'script to run after launching the emulator'
+    description: 'Script runs after succesful launch of the emulator'
 
 defaults:
   run:
     shell: bash
 
 env:
-  ANDROID_ARCH: x86_64
-  ANDROID_TARGET: google_apis_playstore
-  API_LEVEL: 30
   ANDROID_BUILD_TOOLS_VERSION: 30.0.2
-  # ANDROID_SDK_PACKAGES: system-images;android-30;google_apis_playstore;x86_64 platforms;android-30 build-tools;30.0.3 platform-tools emulator
-  # ANDROID_SDK_PACKAGES: system-images;android-33;google_apis_playstore;x86_64 platforms;android-33 build-tools;33.0.2 platform-tools emulator
-  EMULATOR_TIMEOUT: 350
-  EMULATOR_NAME: nexus
 
 runs:
   using: 'composite'
   steps:
-      # - name: Setup Android SDK
-      #   uses: android-actions/setup-android@v3
-
-      - name: Add avdmanager and sdkmanager to system PATH
+      - name: Add `avdmanager` and `sdkmanager` to System PATH
         run: |
             echo "$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/emulator:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools/${{ env.ANDROID_BUILD_TOOLS_VERSION }}" >> $GITHUB_PATH
         shell: bash
 
-      - name: Install Sdk
+      - name: License agreement
         run: |
           chmod +x ./.github/scripts/accept_license.exp
           ./.github/scripts/accept_license.exp
-          # echo "~~~~~~~~~~~~~~~~~~~~~~~~INSTALLING SDK~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~"
-          # sdkmanager --install 'system-images;android-30;google_apis_playstore;x86_64 platforms;android-30 build-tools;30.0.3 platform-tools emulator'
-          # echo "~~~~~~~~~~~~~~~~~~~~~~~~DONE --- INSTALLING SDK~~~~~~~~~~~~~~~~~~~~~"
         shell: bash
 
-      - name: Check if System Image is Installed
+      - name: Install System Image
         run: |
-          if [ ! -d "$ANDROID_SDK_ROOT/system-images/android-30/google_apis_playstore/x86_64" ]; then
-            echo "System image not found. Installing..."
+            echo "~~~~~~~~~~~~~~~~ Installing System Image ~~~~~~~~~~~~~~~~~"
             sdkmanager --install 'system-images;android-30;google_apis_playstore;x86_64'
-          else
-            echo "System image already installed."
-          fi
+            echo "~~~~~~~~~~~~~~~~ System Image Instaled Successfully ~~~~~~~~~~~~~~~~~"
         shell: bash
 
       - name: Create Emulator
         id: create_emulator
-        run: echo "no" | avdmanager create avd -n TestAVD -k "system-images;android-30;google_apis_playstore;x86_64"
+        run: echo "no" | avdmanager create avd -n TestEmulator30 -k "system-images;android-30;google_apis_playstore;x86_64"
         shell: bash
 
       - name: Check Emulator Creation Status
@@ -62,10 +46,6 @@ runs:
             exit 1
           fi
         shell: bash
-
-      # # - name: Create Emulator
-      # #   run: echo "no" |
-      # #     avdmanager create avd -n TestAVD -k "system-images;android-30;google_apis_playstore;x86_64"
 
       - name: Restart adb server
         run: |
@@ -81,7 +61,7 @@ runs:
           echo "Emulator has finished booting"
           adb devices
         shell: bash
-      
+
       - name: Build App
         run: |
           chmod +x gradlew
@@ -92,7 +72,6 @@ runs:
         run: |
           apk_path=$(find . -type f -and -path '*debug.apk')
           echo $apk_path
-          # adb shell pm uninstall com.example.breach
           adb -s emulator-5554 install /Users/runner/work/breach/breach/app/build/outputs/apk/debug/app-debug.apk
         shell: bash
 
