--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -9,13 +9,7 @@ defaults:
     shell: bash
 
 env:
-  ANDROID_ARCH: x86_64
-  ANDROID_TARGET: google_apis_playstore
-  API_LEVEL: 30
   ANDROID_BUILD_TOOLS_VERSION: 30.0.2
-  ANDROID_SDK_PACKAGES: system-images;android-33;google_apis_playstore;x86_64 platforms;android-33 build-tools;33.0.2 platform-tools emulator
-  EMULATOR_TIMEOUT: 350
-  EMULATOR_NAME: nexus
 
 runs:
   using: 'composite'
@@ -62,7 +56,7 @@ runs:
       - name: Launch Emulator
         run: |
           echo "Starting emulator and waiting for boot to complete...."
-          $ANDROID_HOME/emulator/emulator -avd TestAVD -no-skin -no-audio -no-window &
+          $ANDROID_HOME/emulator/emulator -avd TestEmulator30 -no-skin -no-audio -no-window &
           adb wait-for-device 
           echo "Emulator has finished booting"
           adb devices
