--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -1,4 +1,4 @@
-name: 'Launch Emulator and run tests'
+name: 'Launch emulator and run tests'
 description: 'Launches an Android emulator and runs the input script'
 inputs:
   script:
@@ -19,7 +19,7 @@ runs:
             echo "$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/emulator:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools/${{ env.ANDROID_BUILD_TOOLS_VERSION }}" >> $GITHUB_PATH
         shell: bash
 
-      - name: License agreement
+      - name: SDK package licenses agreement
         run: |
           chmod +x ./.github/scripts/accept_license.exp
           ./.github/scripts/accept_license.exp
@@ -78,12 +78,6 @@ runs:
       - name: Run script
         run: bash -c "${{ inputs.script }}"
         shell: bash
-
-      # # - name: Upload logs
-      # #   uses: actions/upload-artifact@v2
-      # #   with:
-      # #     name: logs
-      # #     path: app/emulator.log
 
       - name: Uninstall the app
         run: |
