--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -10,6 +10,8 @@ defaults:
 
 env:
   ANDROID_BUILD_TOOLS_VERSION: 30.0.2
+  SYSTEM_IMAGE_INSTALLING_MSG: "~~~~~~~~~~~~~~~~ Installing System Image ~~~~~~~~~~~~~~~~~"
+  SYSTEM_IMAGE_INSTALLED_MSG: "~~~~~~~~~~~~~~~~ System Image Installed Successfully ~~~~~~~~~~~~~~~~~"
 
 runs:
   using: 'composite'
@@ -19,17 +21,17 @@ runs:
             echo "$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/emulator:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools/${{ env.ANDROID_BUILD_TOOLS_VERSION }}" >> $GITHUB_PATH
         shell: bash
 
-      - name: SDK package licenses agreement
-        run: |
-          chmod +x ./.github/scripts/accept_license.exp
-          ./.github/scripts/accept_license.exp
-        shell: bash
+      # - name: SDK package licenses agreement
+      #   run: |
+      #     chmod +x ./.github/scripts/accept_license.exp
+      #     ./.github/scripts/accept_license.exp
+      #   shell: bash
 
       - name: Install System Image
         run: |
-            echo "~~~~~~~~~~~~~~~~ Installing System Image ~~~~~~~~~~~~~~~~~"
+            echo ${env.SYSTEM_IMAGE_INSTALLING_MSG}
             sdkmanager --install 'system-images;android-30;google_apis_playstore;x86_64'
-            echo "~~~~~~~~~~~~~~~~ System Image Instaled Successfully ~~~~~~~~~~~~~~~~~"
+            echo ${env.SYSTEM_IMAGE_INSTALLED_MSG}
         shell: bash
 
       - name: Create Emulator
@@ -39,7 +41,7 @@ runs:
 
       - name: Check Emulator Creation Status
         run: |
-          if [ $? -eq 0 ]; then
+          if [ $? -eq 0 ]; then  # Verfies the exit status of the last executed command i.e. "create_emulator", if it is 0 then the emulator is created succesfully.
             echo "Emulator creation successful"
           else
             echo "Emulator creation failed"
