Added  chmod +x gradlew

--- a/.github/workflows/testing_emulator.yml
+++ b/.github/workflows/testing_emulator.yml
@@ -28,6 +28,7 @@ jobs:
         uses: ./.github/actions/launch_emulator
         with:
           script: |
+            chmod +x gradlew
             ./gradlew installDebug
             ./gradlew :app:installDebugAndroidTest
             adb shell pm list instrumentation
