--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -60,18 +60,18 @@ runs:
           adb devices
         shell: bash
 
-      # - name: Build App
-      #   run: |
-      #     chmod +x gradlew
-      #     ./gradlew assembleDebug
-      #   shell: bash
+      - name: Build App
+        run: |
+          chmod +x gradlew
+          ./gradlew assembleDebug
+        shell: bash
 
-      # - name: Find and install App
-      #   run: |
-      #     apk_path=$(find . -type f -and -path '*debug.apk')
-      #     echo $apk_path
-      #     adb -s emulator-5554 install /Users/runner/work/breach/breach/app/build/outputs/apk/debug/app-debug.apk
-      #   shell: bash
+      - name: Find and install App
+        run: |
+          apk_path=$(find . -type f -and -path '*debug.apk')
+          echo $apk_path
+          adb -s emulator-5554 install /Users/runner/work/breach/breach/app/build/outputs/apk/debug/app-debug.apk
+        shell: bash
 
       - name: Run script
         run: bash -c "${{ inputs.script }}"
