--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -21,8 +21,9 @@ runs:
 
       - name: SDK package licenses agreement
         run: |
-          chmod +x ./.github/scripts/accept_license.exp
-          ./.github/scripts/accept_license.exp
+          # chmod +x ./.github/scripts/accept_license.exp
+          # ./.github/scripts/accept_license.exp
+          yes | sdkmanager --licenses
         shell: bash
 
       - name: Install System Image
