--- a/.github/actions/launch_emulator/action.yml
+++ b/.github/actions/launch_emulator/action.yml
@@ -21,9 +21,8 @@ runs:
 
       - name: SDK package licenses agreement
         run: |
-          # chmod +x ./.github/scripts/accept_license.exp
-          # ./.github/scripts/accept_license.exp
-          yes | sdkmanager --licenses
+          chmod +x ./.github/scripts/accept_license.exp
+          ./.github/scripts/accept_license.exp
         shell: bash
 
       - name: Install System Image
