--- a/.github/workflows/schedule_tests_run.yml
+++ b/.github/workflows/schedule_tests_run.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: print output
         if: always()
-        run: cat test_output.txt | grep -E "com.example.breach.*FAILED"
+        run: cat test_output.txt | grep -E "com.example.breach.*"
 
       - name: print date
         if: always()
