Comment out send msg step

--- a/.github/workflows/schedule_tests_run.yml
+++ b/.github/workflows/schedule_tests_run.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   launch_emulator:
-    name: Launch emulator, run instrumented tests and send notification on Slack
+    name: Launch emulator, run instrumented tests and send notification on Slack 
     runs-on: macos-latest
     steps:
       - name: Checkout the code
@@ -27,14 +27,12 @@ jobs:
         with:
           script: |
             echo "NO Script"
-
       - name: Run instrumented tests and save the output
-        id: ranTest
         run: ./gradlew connectedCheck > test_output.txt
 
       - name: print output
         if: always()
-        run: cat test_output.txt | grep -E "BUILD SUCCESSFUL"
+        run: cat test_output.txt
 
       - name: print date
         if: always()
@@ -42,12 +40,12 @@ jobs:
           today=$(date +'%Y-%m-%dT%H:%M:%S')
           echo "today: $today"
 
-      - name: send message
-        if: always()
-        run: |
-          if [ ${{ steps.ranTest.outcome }} == 'success' ]; then
-            echo "All tests passed!"
-          else
-            tests=$(cat test_output.txt | grep -E "com.example.breach.*FAILED")
-            echo "Following tests failed!\n $tests"
-          fi
+      # - name: send message
+      #   if: always()
+      #   run: |
+      #     if [ ${{ steps.ranTest.outcome }} == 'success' ]; then
+      #       echo "All tests passed!"
+      #     else
+      #       tests=$(cat test_output.txt | grep -E "com.example.breach.*FAILED")
+      #       echo "Following tests failed!\n $tests"
+      #     fi
