--- a/.github/workflows/schedule_tests_run.yml
+++ b/.github/workflows/schedule_tests_run.yml
@@ -1,4 +1,4 @@
-name: schedule run for instrumented tests
+name: Schedule execution of all unit and instrumented tests
 on:
   push:
     branches:
@@ -6,12 +6,15 @@ on:
   pull_request:
     branches:
       VaibhavSMisal-patch-2
+  # schedule:
+  #   - cron: '15 14 * * *'
   workflow_dispatch:
 
 jobs:
-  launch_emulator:
-    name: Launch emulator, run instrumented tests and send notification on Slack 
+  nightly_end_to_end_tests:
+    name: Launch emulator, run all unit and instrumented tests and send results on Slack 
     runs-on: macos-latest
+
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
@@ -22,23 +25,47 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Create, Launch emulator and run tests
+      - name: run unit tests and save the output
+        id: unitTests
+        run: |
+          chmod +x gradlew
+          ./gradlew test > unit_tests_output.txt
+
+      - name: print output
+        if: always()
+        run: cat unit_tests_output.txt
+
+      - name: Create and Launch emulator
         uses: ./.github/actions/launch_emulator
         with:
           script: |
             echo "NO Script"
+
       - name: Run instrumented tests and save the output
-        run: ./gradlew connectedCheck > test_output.txt
+        id: instrumentedTests
+        run: ./gradlew connectedCheck > instrumented_tests_output.txt
 
       - name: print output
         if: always()
-        run: cat test_output.txt
+        run: cat instrumented_tests_output.txt
 
       - name: print date
         if: always()
         run: |
           today=$(date +'%Y-%m-%dT%H:%M:%S')
           echo "today: $today"
+
+      # - name: send message
+      #   if: always()
+      #   run: |
+      #     if [ ${{ steps.test.outcome }} == 'success' ]; then
+      #       curl -X POST -H 'Content-type: application/json' --data '{"message" : "All tests passed!"}' $SLACK_WEBHOOK_URL
+      #     else
+      #       tests=$(cat test_output.txt | grep -E "com.example.breach.*FAILED")
+      #       curl -X POST -H 'Content-type: application/json' --data '{"message" : "Following tests failed!\n $tests"}' $SLACK_WEBHOOK_URL
+      #     fi
+      #   env:
+      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
       # - name: send message
       #   if: always()
