--- a/.github/workflows/schedule_tests_run.yml
+++ b/.github/workflows/schedule_tests_run.yml
@@ -6,8 +6,6 @@ on:
   pull_request:
     branches:
       VaibhavSMisal-patch-2
-  # schedule:
-  #   - cron: '15 14 * * *'
   workflow_dispatch:
 
 jobs:
@@ -32,7 +30,6 @@ jobs:
           ./gradlew test --continue > unit_tests_output.txt || true
 
       - name: print unit tests output
-        if: always()
         run: cat unit_tests_output.txt
 
       - name: Create and Launch emulator
@@ -43,62 +40,34 @@ jobs:
 
       - name: Run all instrumented tests and save the output
         id: instrumentedTests
-        run: ./gradlew connectedCheck > instrumented_tests_output.txt
+        run: ./gradlew connectedCheck --continue > instrumented_tests_output.txt || true
 
       - name: print instrumented tests output
-        if: always()
         run: cat instrumented_tests_output.txt
 
-      - name: send message over Slack
+      - name: send report over Slack
+        if: always()
         run: |
           if [ -s unit_tests_output.txt ] && grep -q "FAILED" unit_tests_output.txt; then
             unit_tests=$(grep -E "com.example.breach.*FAILED" unit_tests_output.txt)
-            echo "Following unit tests failed!
-            $unit_tests"
+            unit_tests_report="Following unit tests failed!\n$unit_tests\n\n"
           else
-            echo "All unit tests passed!"
+            unit_tests_report="All unit tests passed!\n"
           fi
-      
+
           if [ -s instrumented_tests_output.txt ] && grep -q "FAILED" instrumented_tests_output.txt; then
             instrumented_tests=$(grep -E "com.example.breach.*FAILED" instrumented_tests_output.txt)
-            echo "Following instrumented tests failed!
-            $instrumented_tests"
+            instrumented_tests_report="Following instrumented tests failed!\n$instrumented_tests"
           else
-            echo "All instrumented tests passed!"
+            instrumented_tests_report="All instrumented tests passed!\n"
           fi
 
+          echo "$unit_tests_report"
+          echo "$instrumented_tests_report"
 
-      
-      # - name: send message over Slack
-      #   run: |
-      #     if [ "${{ steps.unitTests.outcome }}" == 'success' ] && [ "${{ steps.instrumentedTests.outcome }}" == 'success' ]; then
-      #       echo "All unit tests and instrumented tests passed!\n"
-      #       # curl -X POST -H 'Content-type: application/json' --data '{"message" : "All tests passed!"}' $SLACK_WEBHOOK_URL
-      #     elif [ "${{ steps.unitTests.outcome }}" != 'success' ] && [ "${{ steps.instrumentedTests.outcome }}" == 'success' ]; then
-      #       unit_tests=$(cat unit_tests_output.txt | grep -E "com.example.breach.*FAILED")
-      #       echo "Following unit tests failed!\n $unit_tests\n"
-      #       echo "All the instrumented tests are passed!"
-      #       # curl -X POST -H 'Content-type: application/json' --data '{"message" : "Following unit tests failed!\n $unit_tests"}' $SLACK_WEBHOOK_URL
-      #     elif [ "${{ steps.unitTests.outcome }}" == 'success' ] && [ "${{ steps.instrumentedTests.outcome }}" != 'success' ]; then
-      #       instrumented_tests=$(cat instrumented_tests_output.txt | grep -E "com.example.breach.*FAILED")
-      #       echo "All the unit tests are passed!\n"
-      #       echo "Following instrumented tests failed!\n $instrumented_tests"
-      #     else
-      #       unit_tests=$(cat unit_tests_output.txt | grep -E "com.example.breach.*FAILED")
-      #       echo "Following unit tests failed!\n $unit_tests\n"
-      #       instrumented_tests=$(cat instrumented_tests_output.txt | grep -E "com.example.breach.*FAILED")
-      #       echo "Following instrumented tests failed!\n $instrumented_tests"
-      #     fi
-
-        # env:
-        #   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-
-      # - name: send message
-      #   if: always()
-      #   run: |
-      #     if [ ${{ steps.ranTest.outcome }} == 'success' ]; then
-      #       echo "All tests passed!"
-      #     else
-      #       tests=$(cat test_output.txt | grep -E "com.example.breach.*FAILED")
-      #       echo "Following tests failed!\n $tests"
-      #     fi
+          # Use these variables in our curl commands later while publishing PR
+          # For example:
+          # curl -X POST -H 'Content-type: application/json' --data "{\"message\": \"$unit_tests_report\"}" $SLACK_WEBHOOK_URL
+          # curl -X POST -H 'Content-type: application/json' --data "{\"message\": \"$instrumented_tests_report\"}" $SLACK_WEBHOOK_URL
+          # env:
+          #   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
