--- a/.github/workflows/testing_emulator.yml
+++ b/.github/workflows/testing_emulator.yml
@@ -11,9 +11,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  launch_emulator:
+  run_instrumented_tests:
     name: Launch emulator and run tests
     runs-on: macos-latest
+
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
@@ -28,4 +29,4 @@ jobs:
         uses: ./.github/actions/launch_emulator
         with:
           script: |
-            ./gradlew connectedCheck
+            ./gradlew connectedCheck --continue
