--- a/.github/workflows/schedule_tests_run.yml
+++ b/.github/workflows/schedule_tests_run.yml
@@ -15,13 +15,13 @@ jobs:
 
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
-          distribution: 'temurin'
+          distribution: 'zulu'
 
       - name: run all unit tests and save the output
         id: unitTests
